--- a/Tarea 1.ipynb
+++ b/Tarea 1.ipynb
@@ -39,7 +39,7 @@
     "L = range(0,11) # la funcion range crea una lista con enteros en el intervalo (start,stop -1)\n",
     "                # por alguna extraña razón python hace eso muy seguido, definir cosas que\n",
     "                # no consideran el ultimo elemento (como aqui el 11)\n",
-    "print L"
+    "print (L)"
    ]
   },
   {
@@ -70,13 +70,13 @@
     "# Slicing es cortar o seleccionar una parte de una lista (tambien funciona con arreglos y otros\n",
     "# tipos de datos)\n",
     "\n",
-    "print L_odd\n",
-    "L_odd = L[1::2]  "
+    "L_odd = L[1::2]  \n",
+    "print (L_odd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -86,7 +86,7 @@
      "output_type": "stream",
      "text": [
       "L[0], L[1], L[2], L[10]\n",
-      "0 1 2 10\n",
+      "(0, 1, 2, 10)\n",
       "\n",
       " L[1::1]\n",
       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
@@ -105,27 +105,27 @@
     "\n",
     "# aqui abajo imprimimos el contenido de los primeros tres elementos con indice 0, 1 y 2 \n",
     "# y el onceavo elemento con index 10\n",
-    "print 'L[0], L[1], L[2], L[10]'\n",
-    "print L[0], L[1], L[2], L[10]\n",
+    "print ('L[0], L[1], L[2], L[10]')\n",
+    "print (L[0], L[1], L[2], L[10])\n",
     "\n",
     "# los \"::\" dentro de [ ] indican que vamos a hacer un slicing en los elementos de la lista\n",
     "# el numero que sigue a \"::\" indica cada cuantos elementos queremos seleccionar de nuestra lista\n",
     "\n",
     "# Si hacemos\n",
     "\n",
-    "print '\\n L[1::1]'\n",
-    "print L[1::1] # imprimimos una lista que empieza con el segundo elemento de la lista L\n",
+    "print ('\\n L[1::1]')\n",
+    "print (L[1::1]) # imprimimos una lista que empieza con el segundo elemento de la lista L\n",
     "                # y que toma cada un elemento de la lista L \n",
     "                # o sea que no más quitamos el primer elemento =p\n",
     "        \n",
     "# pero si hacemos \n",
-    "print '\\n L[1::3]'\n",
-    "print L[1::3] # imprimimos una lista que empieza con el segundo elemento de la lista L\n",
+    "print ('\\n L[1::3]')\n",
+    "print (L[1::3]) # imprimimos una lista que empieza con el segundo elemento de la lista L\n",
     "                # y que toma cada tres elementos de la lista L \n",
     "\n",
     "    \n",
-    "print '\\n L[2::4]'\n",
-    "print L[2::4] # imprimimos una lista que empieza con el tercer elemento de la lista L\n",
+    "print ('\\n L[2::4]')\n",
+    "print (L[2::4]) # imprimimos una lista que empieza con el tercer elemento de la lista L\n",
     "                # y que toma cada cuatro elementos de la lista L \n"
    ]
   },
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -149,21 +149,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L[10]= 10\n",
-      "L[-1]= 10\n",
-      "L[-2]= 9 que es igual a L[9]= 9\n",
+      "('L[10]=', 10)\n",
+      "('L[-1]=', 10)\n",
+      "('L[-2]=', 9, 'que es igual a L[9]=', 9)\n",
       "[8, 9, 10]\n"
      ]
     }
    ],
    "source": [
     "# el ultimo elemento de la lista es\n",
-    "print 'L[10]=', L[10]\n",
+    "print ('L[10]=', L[10])\n",
     "# pero también puede obtenerse con \n",
-    "print 'L[-1]=', L[-1]\n",
+    "print ('L[-1]=', L[-1])\n",
     "\n",
     "# el penultimo elemento es\n",
-    "print 'L[-2]=',L[-2],'que es igual a L[9]=',L[9]\n",
+    "print ('L[-2]=',L[-2],'que es igual a L[9]=',L[9])\n",
     "\n",
     "\n",
     "# Entonces si queremos los ultimos tres elementos usando slicing  eindexing negativo,\n",
@@ -175,7 +175,7 @@
     "\n",
     "L_last3 = L[-3::1]\n",
     "\n",
-    "print L_last3\n",
+    "print (L_last3)\n",
     "\n",
     "# [-3::1] -> dice que queremos empezar en el elemento -3 (antepenultimo) y tomar todos\n",
     "# (cada uno) de los elementos a su derecha i.e. los elementos -3, -2, y -1 (o sea 8,9 y 10).\n"
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -261,7 +261,7 @@
    "source": [
     "gato = { 'Nombre': 'Marucho Von Bimbo'}\n",
     "\n",
-    "print gato['Nombre'] # accedemos al elemento del diccionario usando el \"key\""
+    "print (gato['Nombre']) # accedemos al elemento del diccionario usando el \"key\"("
    ]
   },
   {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -302,10 +302,10 @@
     "       'Vidas cobradas': 1e4,\n",
     "       'Lista favorita': range(-1,2)}\n",
     "\n",
-    "print gato['Artista favorito']\n",
-    "print gato['Alias']\n",
-    "print gato['Vidas cobradas']\n",
-    "print gato['Lista favorita']"
+    "print (gato['Artista favorito'])\n",
+    "print (gato['Alias'])\n",
+    "print (gato['Vidas cobradas'])\n",
+    "print (gato['Lista favorita'])"
    ]
   },
   {
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -381,7 +381,7 @@
     }
    ],
    "source": [
-    "print Andy['ATP']"
+    "print (Andy['ATP'])"
    ]
   },
   {
